k8s/config-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-service
  template:
    metadata:
      labels:
        app: config-service
    spec:
      containers:
      - name: config-service
        image: ghcr.io/andalusia-idea/config-service:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
            memory: "80Mi"
          limits:
            cpu: "500m"
            memory: "150Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: config-service
  namespace: production
spec:
  selector:
    app: config-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
