k8s/settlerecon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: settlerecon-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: settlerecon-service
  template:
    metadata:
      labels:
        app: settlerecon-service
    spec:
      containers:
      - name: settlerecon-service
        image: ghcr.io/andalusia-idea/settlerecon-service:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
            memory: "80Mi"
          limits:
            cpu: "500m"
            memory: "150Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: settlerecon-service
  namespace: production
spec:
  selector:
    app: settlerecon-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
